fix(portal): wrap long strings in Table of Contents to prevent floating
(cherry picked from commit 68bb42c544660a6735ccde40e4a0cd0f223879ec)

--- a/gravitee-apim-portal-webui/src/app/components/gv-markdown-toc/gv-markdown-toc.component.css
+++ b/gravitee-apim-portal-webui/src/app/components/gv-markdown-toc/gv-markdown-toc.component.css
@@ -37,7 +37,7 @@
 .markdown-toc > .toc-list li {
   list-style: none;
   line-height: 25px;
-  line-break: anywhere;
+  line-break: auto;
 }
 
 .toc-list {
@@ -56,7 +56,7 @@ a.toc-link {
   text-decoration: none;
   height: 100%;
   cursor: pointer;
-  white-space: nowrap;
+  white-space: normal;
   box-sizing: border-box;
 }
 
